# pdf_to_audiobook

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml  run_web_gui.py  setup.py
pdf_to_audiobook/: __init__.py  config.py  file_utils.py  logging_config.py  main.py  pdf_reader.py  tts_client.py  utils.py  validation.py  web_gui.py
tests/: __init__.py  test_config.py  test_file_utils.py  test_logging_config.py  test_main.py  test_pdf_reader.py  test_tts_client.py  test_utils.py  test_validation.py  test_web_gui.py
text_outputs/: 11212_Value_aligned_Behavior_C_openai.md  12730_Value_Incentivized_Prefe_openai.md  1945_Model_Free_Offline_Reinfo_openai.md  3089_SimpleTM_A_Simple_Baselin_gemini.md  iterative_dual_rl_openai.md  published_as_a_conference_paper_at_iclr_2025_openai.md  student_informed_teacher_training_openai.md  test_gemini.md  towards_general_purpose_model_free_reinforcement_learning_openai.md  training_language_models_to_self_correct_via_reinforcement_learning_openai.md  transformer_based_off_policy_episodic_reinforcement_learning_top_erl_openai.md  understanding_constraint_inference_in_safety_critical_inverse_reinforcement_learning_openai.md
